--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,9 @@
     "express-jwt": "^5.3.1",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.8"
+    "mongoose": "^5.7.8",
+    "nodemon": "^2.0.2",
+    "react-google-login": "^5.0.7",
+    "react-router-dom": "^5.1.2"
   }
 }
